feat(user-auth): UserVerify added
